Portfolio page basic design, contact pg created

--- a/contact.html
+++ b/contact.html
@@ -24,13 +24,13 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item ">
                     <a class="nav-link" href="./index.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./portfolio.html">Portfolio</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
 
@@ -39,24 +39,11 @@
     </nav>
 
     <main>
-        <article>
-            <div class="container rounded shadow-lg about-me p-4 mt-4">
-                <h1 class="mt-2">About Me</h1>
-                <hr />
-                <div class="row">
-                    <div class="col-md-4">
-                        <img src="./assets/images/tbrand-sq.jpg" class=" mr-4 mb-2 py-2 px-2 img-thumbnail float-left" alt="headshot">
-                    </div>
-                    <div class="col-md-8">
-                        <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. Lorem ipsum dolor sit
-                            amet, consectetur adipisicing elit. Ab omnis minima dicta ex, magni nostrum natus unde consectetur! Ex, nostrum ipsum deserunt libero nesciunt deleniti iste neque
-                            labore enim suscipit, minima alias! Repudiandae nulla neque dolorum modi corrupti ipsam nam, laudantium, quam reprehenderit amet omnis deleniti accusamus cumque quidem
-                            tempore aspernatur error ut esse consequatur? Ea iste qui quisquam modi aliquid eos nulla, id quasi nesciunt reiciendis veritatis optio explicabo, esse officiis et,
-                            sequi at fuga laborum cupiditate voluptatum asperiores! Natus quam non ullam ducimus unde eius cupiditate asperiores, laudantium consequuntur blanditiis sed error
-                            consequatur voluptates mollitia eos. Possimus, laudantium!</p>
-                    </div>
-                </div>
-        </article>
+
+        <div class="container-sm rounded shadow-lg portfolio p-4 mt-4">
+            <h1 class="mt-2">Contact</h1>
+            <hr />
+        </div>
     </main>
 
 
