Contact page content,  portfolio images

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <nav class="navbar py-0 navbar-expand-sm navbar-light navbg">
-        <a class="navbar-brand p-3 ml-4" href="#">Tiffany L. Brand</a>
+        <a class="navbar-brand text-light p-3 ml-4" href="./index.html">Tiffany L. Brand</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
