--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 <body>
 
     <nav class="navbar py-0 navbar-expand-sm navbar-light navbg">
-        <a class="navbar-brand p-3 ml-4" href="#">Tiffany L. Brand</a>
+        <a class="navbar-brand text-light p-3 ml-4" href="./index.html">Tiffany L. Brand</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -43,6 +43,26 @@
         <div class="container-sm rounded shadow-lg portfolio p-4 mt-4">
             <h1 class="mt-2">Portfolio</h1>
             <hr />
+            <div class="row justify-content-center">
+                <div class="col-md-6 col-sm-12 portfolio-item">
+                    <h2 class="p-2 text-center container-fluid">Sun Services</h2>
+                    <img class="img-fluid" src="./assets/images/sun.jpg" alt="Sun Services">
+                </div>
+                <div class="col-md-6 col-sm-12 portfolio-item">
+                    <h2 class="p-2 text-center container-fluid">Forest Game</h2>
+                    <img class="img-fluid" src="./assets/images/forest.jpg" alt="Sun Services">
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-6 col-sm-12 portfolio-item">
+                    <h2 class="p-2 text-center container-fluid">Sun Services</h2>
+                    <img class="img-fluid" src="./assets/images/sun.jpg" alt="Sun Services">
+                </div>
+                <div class="col-md-6 col-sm-12 portfolio-item">
+                    <h2 class="p-2 text-center container-fluid">Forest Game</h2>
+                    <img class="img-fluid" src="./assets/images/forest.jpg" alt="Sun Services">
+                </div>
+            </div>
             <div class="row justify-content-center">
                 <div class="col-md-6 col-sm-12 portfolio-item">
                     <h2 class="p-2 text-center container-fluid">Sun Services</h2>
