--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 <body>
 
     <nav class="navbar py-0 navbar-expand-sm navbar-light navbg">
-        <a class="navbar-brand p-3 ml-4" href="#">Tiffany L. Brand</a>
+        <a class="navbar-brand text-light p-3 ml-4" href="./index.html">Tiffany L. Brand</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -43,6 +43,23 @@
         <div class="container-sm rounded shadow-lg portfolio p-4 mt-4">
             <h1 class="mt-2">Contact</h1>
             <hr />
+
+            <form>
+                <div class="form-group">
+                    <label for="contactName">Name</label>
+                    <input type="text" class="form-control" id="contactName" placeholder="Jane Smith">
+                </div>
+                <div class="form-group">
+                    <label for="contactEmail">Email address</label>
+                    <input type="email" class="form-control" id="contactEmail" placeholder="example@gmail.com">
+                </div>
+                <div class="form-group">
+                    <label for="contactMsg">Message</label>
+                    <textarea class="form-control" id="contactMsg" rows="5"></textarea>
+                </div>
+
+                <button type="submit" class="btn btn-secondary">Submit</button>
+            </form>
         </div>
     </main>
 
