--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-
+    <!-- Begin Navigation -->
     <nav class="navbar py-0 navbar-expand-sm navbar-light navbg">
         <a class="navbar-brand text-light p-3 ml-4" href="./index.html">Tiffany L. Brand</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,48 +37,52 @@
             </ul>
         </div>
     </nav>
+    <!-- End Navigation -->
 
     <main>
-
         <div class="container-sm rounded shadow-lg portfolio p-4 mt-4">
             <h1 class="mt-2">Portfolio</h1>
             <hr />
             <div class="row justify-content-center">
                 <div class="col-md-6 col-sm-12 portfolio-item">
+                    <h2 class="p-2 text-center container-fluid">Horiseon Refactor</h2>
+                    <a href="https://github.com/tiffany-brand/horiseon-accessibility-code-refactor">
+                        <img class="img-fluid" src="./assets/images/horiseon.jpg" alt="Horiseon Refactor">
+                    </a>
+                </div>
+                <div class="col-md-6 col-sm-12 portfolio-item">
+                    <h2 class="p-2 text-center container-fluid">YelpCamp</h2>
+                    <a href="https://secret-reef-16111.herokuapp.com/">
+                        <img class="img-fluid" src="./assets/images/yelpcamp.jpg" alt="YelpCamp">
+                    </a>
+                </div>
+                <div class="col-md-6 col-sm-12 portfolio-item">
+                    <h2 class="p-2 text-center container-fluid">jQuery Calculator</h2>
+                    <a href="https://github.com/tiffany-brand/FCC-Calculator-Project">
+                        <img class="img-fluid" src="./assets/images/calculator.jpg" alt="jQuery Calculator">
+                    </a>
+                </div>
+                <div class="col-md-6 col-sm-12 portfolio-item">
+                    <h2 class="p-2 text-center container-fluid">Future Project</h2>
+                    <a href="#">
+                        <img class="img-fluid" src="./assets/images/light.jpg" alt="Future Project">
+                    </a>
+                </div>
+
+                <div class="col-md-6 col-sm-12 portfolio-item">
                     <h2 class="p-2 text-center container-fluid">Sun Services</h2>
-                    <img class="img-fluid" src="./assets/images/sun.jpg" alt="Sun Services">
+                    <a href="#">
+                        <img class="img-fluid" src="./assets/images/sun.jpg" alt="Sun Services">
+                    </a>
                 </div>
                 <div class="col-md-6 col-sm-12 portfolio-item">
                     <h2 class="p-2 text-center container-fluid">Forest Game</h2>
-                    <img class="img-fluid" src="./assets/images/forest.jpg" alt="Sun Services">
+                    <a href="#">
+                        <img class="img-fluid" src="./assets/images/forest.jpg" alt="Sun Services">
+                    </a>
                 </div>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-md-6 col-sm-12 portfolio-item">
-                    <h2 class="p-2 text-center container-fluid">Sun Services</h2>
-                    <img class="img-fluid" src="./assets/images/sun.jpg" alt="Sun Services">
-                </div>
-                <div class="col-md-6 col-sm-12 portfolio-item">
-                    <h2 class="p-2 text-center container-fluid">Forest Game</h2>
-                    <img class="img-fluid" src="./assets/images/forest.jpg" alt="Sun Services">
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-md-6 col-sm-12 portfolio-item">
-                    <h2 class="p-2 text-center container-fluid">Sun Services</h2>
-                    <img class="img-fluid" src="./assets/images/sun.jpg" alt="Sun Services">
-                </div>
-                <div class="col-md-6 col-sm-12 portfolio-item">
-                    <h2 class="p-2 text-center container-fluid">Forest Game</h2>
-                    <img class="img-fluid" src="./assets/images/forest.jpg" alt="Sun Services">
-                </div>
-            </div>
-
-
-
-
         </div>
-
     </main>
 
 
