--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="h-100" lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -39,6 +39,7 @@
     </nav>
     <!-- End Navigation -->
 
+    <!-- Main - Portfolio -->
     <main>
         <div class="container-sm rounded shadow-lg portfolio p-4 mt-4">
             <h1 class="mt-2">Portfolio</h1>
@@ -85,7 +86,11 @@
         </div>
     </main>
 
-
+    <footer class="footer mt-4 py-3">
+        <div class="container text-center">
+            <span class="text-muted"><small>Copyright 2020 Tiffany L. Brand</small></span>
+        </div>
+    </footer>
 
     <!-- JavaScript for Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
