--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="h-100" lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -12,11 +12,11 @@
     <!-- Portfolio Styles -->
     <link rel="stylesheet" href="./assets/style.css">
 
-    <title>Tiffany Brand</title>
+    <title>Tiffany L. Brand</title>
 </head>
 
-<body>
-
+<body class="d-flex flex-column h-100">
+    <!-- Begin Navigation -->
     <nav class="navbar py-0 navbar-expand-sm navbar-light navbg">
         <a class="navbar-brand text-light p-3 ml-4" href="./index.html">Tiffany L. Brand</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,8 +37,10 @@
             </ul>
         </div>
     </nav>
+    <!-- End Navigation -->
 
-    <main>
+    <!-- Main - About Me -->
+    <main class="flex-shrink-0">
         <article>
             <div class="container rounded shadow-lg about-me p-4 mt-4">
                 <h1 class="mt-2">About Me</h1>
@@ -59,6 +61,11 @@
         </article>
     </main>
 
+    <footer class="footer mt-auto py-3">
+        <div class="container text-center">
+            <span class="text-muted"><small>Copyright 2020 Tiffany L. Brand</small></span>
+        </div>
+    </footer>
 
     <!-- JavaScript for Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
