--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 
 <body>
     <!-- Begin Navigation -->
-    <nav class="navbar py-0 navbar-expand-sm navbar-light navbg">
+    <nav class="navbar py-0 navbar-expand-sm navbar-light navbg shadow-sm">
         <a class="navbar-brand text-light p-3 ml-4" href="./index.html">Tiffany L. Brand</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
