Add social media icons

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- Portfolio Styles -->
     <link rel="stylesheet" href="./assets/style.css">
 
+    <!-- Font Awesome Icons -->
+    <script src="https://kit.fontawesome.com/fdf8c977f5.js" crossorigin="anonymous"></script>
+
     <title>Tiffany L. Brand</title>
 </head>
 
@@ -58,6 +61,17 @@
                             consequatur voluptates mollitia eos. Possimus, laudantium!</p>
                     </div>
                 </div>
+
+                <div class="row">
+                    <div class="offset-md-4 col-md-2">
+                        <a href="https://github.com/"><i class="fab fa-github-square"></i></a>
+                    </div>
+                    <div class="col-md-2">
+                        <a href="https://www.linkedin.com/in/tiffanybrand/"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+
+
         </article>
     </main>
 
