--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                 </div>
 
                 <div class="row">
-                    <div class="offset-md-4 col-md-2">
-                        <a href="https://github.com/"><i class="fab fa-github-square"></i></a>
+                    <div class="offset-md-4 col-md-2 col-sm-6 col-6 text-center">
+                        <a href="https://github.com/tiffany-brand"><i class="fab fa-github-square"></i></a>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-md-2 col-sm-6 col-6 text-center">
                         <a href="https://www.linkedin.com/in/tiffanybrand/"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
