Add project to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <!-- Portfolio Styles -->
     <link rel="stylesheet" href="./assets/style.css">
@@ -19,7 +19,8 @@
     <!-- Begin Navigation -->
     <nav class="navbar py-0 navbar-expand-sm navbar-light navbg shadow-sm">
         <a class="navbar-brand text-light p-3 ml-4" href="./index.html">Tiffany L. Brand</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -64,22 +65,21 @@
                     </a>
                 </div>
                 <div class="col-md-6 col-sm-12 portfolio-item">
+                    <h2 class="p-2 text-center container-fluid">Mouse Invaders</h2>
+                    <a href="https://scratch.mit.edu/projects/378530331">
+                        <img class="img-fluid" src="./assets/images/mouse-invaders.jpg" alt="Mouse Invaders">
+                    </a>
+                </div>
+                <div class="col-md-6 col-sm-12 portfolio-item">
                     <h2 class="p-2 text-center container-fluid">Future Project</h2>
                     <a href="#">
                         <img class="img-fluid" src="./assets/images/light.jpg" alt="Future Project">
                     </a>
                 </div>
-
                 <div class="col-md-6 col-sm-12 portfolio-item">
-                    <h2 class="p-2 text-center container-fluid">Sun Services</h2>
+                    <h2 class="p-2 text-center container-fluid">Future Project</h2>
                     <a href="#">
-                        <img class="img-fluid" src="./assets/images/sun.jpg" alt="Sun Services">
-                    </a>
-                </div>
-                <div class="col-md-6 col-sm-12 portfolio-item">
-                    <h2 class="p-2 text-center container-fluid">Forest Game</h2>
-                    <a href="#">
-                        <img class="img-fluid" src="./assets/images/forest.jpg" alt="Sun Services">
+                        <img class="img-fluid" src="./assets/images/crystal-ball.jpg" alt="Future Project">
                     </a>
                 </div>
             </div>
@@ -93,10 +93,14 @@
     </footer>
 
     <!-- JavaScript for Bootstrap -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
 </body>
 
