Fix unclosed div

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <!-- Portfolio Styles -->
     <link rel="stylesheet" href="./assets/style.css">
@@ -22,7 +22,8 @@
     <!-- Begin Navigation -->
     <nav class="navbar py-0 navbar-expand-sm navbar-light navbg shadow-sm">
         <a class="navbar-brand text-light p-3 ml-4" href="./index.html">Tiffany L. Brand</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -50,14 +51,20 @@
                 <hr />
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="./assets/images/tbrand-sq.jpg" class=" mr-4 mb-2 py-2 px-2 img-thumbnail float-left" alt="headshot">
+                        <img src="./assets/images/tbrand-sq.jpg" class=" mr-4 mb-2 py-2 px-2 img-thumbnail float-left"
+                            alt="headshot">
                     </div>
                     <div class="col-md-8">
-                        <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. Lorem ipsum dolor sit
-                            amet, consectetur adipisicing elit. Ab omnis minima dicta ex, magni nostrum natus unde consectetur! Ex, nostrum ipsum deserunt libero nesciunt deleniti iste neque
-                            labore enim suscipit, minima alias! Repudiandae nulla neque dolorum modi corrupti ipsam nam, laudantium, quam reprehenderit amet omnis deleniti accusamus cumque quidem
-                            tempore aspernatur error ut esse consequatur? Ea iste qui quisquam modi aliquid eos nulla, id quasi nesciunt reiciendis veritatis optio explicabo, esse officiis et,
-                            sequi at fuga laborum cupiditate voluptatum asperiores! Natus quam non ullam ducimus unde eius cupiditate asperiores, laudantium consequuntur blanditiis sed error
+                        <p>This is a wider card with supporting text below as a natural lead-in to additional content.
+                            This content is a little bit longer. Lorem ipsum dolor sit
+                            amet, consectetur adipisicing elit. Ab omnis minima dicta ex, magni nostrum natus unde
+                            consectetur! Ex, nostrum ipsum deserunt libero nesciunt deleniti iste neque
+                            labore enim suscipit, minima alias! Repudiandae nulla neque dolorum modi corrupti ipsam nam,
+                            laudantium, quam reprehenderit amet omnis deleniti accusamus cumque quidem
+                            tempore aspernatur error ut esse consequatur? Ea iste qui quisquam modi aliquid eos nulla,
+                            id quasi nesciunt reiciendis veritatis optio explicabo, esse officiis et,
+                            sequi at fuga laborum cupiditate voluptatum asperiores! Natus quam non ullam ducimus unde
+                            eius cupiditate asperiores, laudantium consequuntur blanditiis sed error
                             consequatur voluptates mollitia eos. Possimus, laudantium!</p>
                     </div>
                 </div>
@@ -70,7 +77,7 @@
                         <a href="https://www.linkedin.com/in/tiffanybrand/"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
-
+            </div>
 
         </article>
     </main>
@@ -82,10 +89,14 @@
     </footer>
 
     <!-- JavaScript for Bootstrap -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
 </body>
 
