Update README and About Me text

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- End Navigation -->
 
     <!-- Main - About Me -->
-    <main class="flex-shrink-0">
+    <main>
         <article>
             <div class="container rounded shadow-lg about-me p-4 mt-4">
                 <h1 class="mt-2">About Me</h1>
@@ -55,17 +55,12 @@
                             alt="headshot">
                     </div>
                     <div class="col-md-8">
-                        <p>This is a wider card with supporting text below as a natural lead-in to additional content.
-                            This content is a little bit longer. Lorem ipsum dolor sit
-                            amet, consectetur adipisicing elit. Ab omnis minima dicta ex, magni nostrum natus unde
-                            consectetur! Ex, nostrum ipsum deserunt libero nesciunt deleniti iste neque
-                            labore enim suscipit, minima alias! Repudiandae nulla neque dolorum modi corrupti ipsam nam,
-                            laudantium, quam reprehenderit amet omnis deleniti accusamus cumque quidem
-                            tempore aspernatur error ut esse consequatur? Ea iste qui quisquam modi aliquid eos nulla,
-                            id quasi nesciunt reiciendis veritatis optio explicabo, esse officiis et,
-                            sequi at fuga laborum cupiditate voluptatum asperiores! Natus quam non ullam ducimus unde
-                            eius cupiditate asperiores, laudantium consequuntur blanditiis sed error
-                            consequatur voluptates mollitia eos. Possimus, laudantium!</p>
+                        <p>Educational Technology Coordinator with a passion for problem solving and
+                            helping people make sense of technology. Throughout my career managing technology for
+                            schools and learning centers, I have enjoyed the challenge of finding solutions in times of
+                            small budgets and big dreams. I love bringing the benefits of technology to everyone, from
+                            beginners to the tech savvy. Coding has long been a career I have wanted to pursue, and I am
+                            now beginning my journey to become a Full Stack Web Developer.</p>
                     </div>
                 </div>
 
