--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
     <!-- End Navigation -->
 
     <!-- Main - Contact Form -->
-    <main>
+    <main class="flex-shrink-0">
         <div class="container rounded shadow-lg contact p-4 mt-4">
             <h1 class="mt-2">Contact</h1>
             <hr />
