--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- End Navigation -->
 
     <!-- Main - About Me -->
-    <main>
+    <main class="flex-shrink-0">
         <article>
             <div class="container rounded shadow-lg about-me p-4 mt-4">
                 <h1 class="mt-2">About Me</h1>
