--- a/index.html
+++ b/index.html
@@ -19,29 +19,31 @@
 </head>
 
 <body class="d-flex flex-column h-100">
-    <!-- Begin Navigation -->
-    <nav class="navbar py-0 navbar-expand-sm navbar-light navbg shadow-sm">
-        <a class="navbar-brand text-light p-3 ml-4" href="./index.html">Tiffany L. Brand</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="./index.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact</a>
-                </li>
+    <header>
+        <!-- Begin Navigation -->
+        <nav class="navbar py-0 navbar-expand-sm navbar-light navbg shadow-sm">
+            <a class="navbar-brand text-light p-3 ml-4" href="./index.html">Tiffany L. Brand</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./index.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contact.html">Contact</a>
+                    </li>
 
-            </ul>
-        </div>
-    </nav>
-    <!-- End Navigation -->
+                </ul>
+            </div>
+        </nav>
+        <!-- End Navigation -->
+    </header>
 
     <!-- Main - About Me -->
     <main class="flex-shrink-0">
@@ -63,7 +65,7 @@
                             now beginning my journey to become a Full Stack Web Developer.</p>
                     </div>
                 </div>
-
+                <!-- Social Media Icons -->
                 <div class="row">
                     <div class="offset-md-4 col-md-2 col-sm-6 col-6 text-center">
                         <a href="https://github.com/tiffany-brand"><i class="fab fa-github-square"></i></a>
@@ -73,17 +75,19 @@
                     </div>
                 </div>
             </div>
-
         </article>
     </main>
+    <!-- End Main -->
 
+    <!-- Begin Footer -->
     <footer class="footer mt-auto py-3">
         <div class="container text-center">
             <span class="text-muted"><small>Copyright 2020 Tiffany L. Brand</small></span>
         </div>
     </footer>
+    <!-- End Footer -->
 
-    <!-- JavaScript for Bootstrap -->
+    <!-- Bootstrap JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
