--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+        crossorigin="anonymous">
 
     <!-- Portfolio Styles -->
     <link rel="stylesheet" href="./assets/style.css">
@@ -19,10 +19,9 @@
 
     <header>
         <!-- Begin Navigation -->
-        <nav class="navbar py-0 navbar-expand-sm navbar-light navbg shadow-sm">
+        <nav class="navbar fixed-top py-0 navbar-expand-sm navbar-light navbg shadow-sm">
             <a class="navbar-brand text-light p-3 ml-4" href="./index.html">Tiffany L. Brand</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -46,26 +45,31 @@
 
     <!-- Main - Contact Form -->
     <main class="flex-shrink-0">
-        <div class="container rounded shadow-lg contact p-4 mt-4">
-            <h1 class="mt-2">Contact</h1>
-            <hr />
+        <section class="pt-5">
+            <div class="container rounded shadow-lg contact p-4 mt-4">
+                <h1 class="mt-2">Contact</h1>
+                <hr />
 
-            <form>
-                <div class="form-group">
-                    <label for="contactName">Name</label>
-                    <input type="text" class="form-control" id="contactName" placeholder="Jane Smith">
-                </div>
-                <div class="form-group">
-                    <label for="contactEmail">Email address</label>
-                    <input type="email" class="form-control" id="contactEmail" placeholder="example@gmail.com">
-                </div>
-                <div class="form-group">
-                    <label for="contactMsg">Message</label>
-                    <textarea class="form-control" id="contactMsg" rows="5"></textarea>
-                </div>
-                <button type="submit" class="btn btn-secondary">Submit</button>
-            </form>
-        </div>
+                <form>
+                    <div class="form-group">
+                        <label for="contactName">Name</label>
+                        <input type="text" class="form-control" id="contactName" placeholder="Jane Smith">
+                    </div>
+                    <div class="form-group">
+                        <label for="contactEmail">Email address</label>
+                        <input type="email" class="form-control" id="contactEmail" placeholder="example@gmail.com">
+                    </div>
+                    <div class="form-group">
+                        <label for="contactMsg">Message</label>
+                        <textarea class="form-control" id="contactMsg" rows="5"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-secondary">Submit</button>
+                </form>
+            </div>
+
+
+        </section>
+
     </main>
 
     <!-- Begin Footer -->
@@ -77,14 +81,10 @@
     <!-- End Footer -->
 
     <!-- Bootstrap JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
 </body>
 
