Add titles to social links

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                 <!-- Social Media Icons -->
                 <div class="row">
                     <div class="offset-md-4 col-md-2 col-sm-6 col-6 text-center">
-                        <a href="https://github.com/tiffany-brand"><i class="fab fa-github-square"></i></a>
+                        <a href="https://github.com/tiffany-brand" title="GitHub"><i class="fab fa-github-square"></i></a>
                     </div>
                     <div class="col-md-2 col-sm-6 col-6 text-center">
-                        <a href="https://www.linkedin.com/in/tiffanybrand/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/tiffanybrand/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
